download pdf, id to string

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -19,5 +19,6 @@
   "meta": "Meta",
   "content": "Content",
   "add_new_letter": "Add new Letter",
-  "edit": "Edit"
+  "edit": "Edit",
+  "download": "Download"
 }
