--- a/src/locales/de-DE.json
+++ b/src/locales/de-DE.json
@@ -19,5 +19,6 @@
   "meta": "Meta",
   "content": "Inhalt",
   "add_new_letter": "Neuer Brief",
-  "edit": "Bearbeiten"
+  "edit": "Bearbeiten",
+  "download": "Download"
 }
