upgrade @baldeweg/ui

--- a/locales/de.json
+++ b/locales/de.json
@@ -20,5 +20,6 @@
   "content": "Inhalt",
   "add_new_letter": "Neuer Brief",
   "edit": "Bearbeiten",
-  "download": "Download"
+  "download": "Download",
+  "dark_mode": "Dark-Mode"
 }
