--- a/locales/en.json
+++ b/locales/en.json
@@ -20,5 +20,6 @@
   "content": "Content",
   "add_new_letter": "Add new Letter",
   "edit": "Edit",
-  "download": "Download"
+  "download": "Download",
+  "dark_mode": "Dark Mode"
 }
